--- a/pom.xml
+++ b/pom.xml
@@ -29,11 +29,11 @@
             <version>9.7</version>
         </dependency>
 
-        <!-- https://mvnrepository.com/artifact/it.unimi.dsi/fastutil -->
+        <!-- https://mvnrepository.com/artifact/javassist/javassist -->
         <dependency>
-            <groupId>it.unimi.dsi</groupId>
-            <artifactId>fastutil</artifactId>
-            <version>8.5.13</version>
+            <groupId>javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.12.1.GA</version>
         </dependency>
     </dependencies>
 </project>
